metadata/force-app/main/default/objects/CustomName_FADRE__c/CustomName_FADRE__c.object-meta.xml
<CustomObject>
    <description>Description_IMaPs</description>
    <label>CustomLabel_YAHxN</label>
    <nameField>
        <label>CustomLabel_YAHxN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_YAHxNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>