metadata/force-app/main/default/objects/CustomName_FADRE__c/fields/CustomField_nHDJl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nHDJl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNcdte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>