metadata/force-app/main/default/objects/CustomName_FADRE__c/fields/CustomField_oEdkS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_oEdkS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldslqlF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>